Created State resource

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -206,7 +206,7 @@
 
     </div>
     <div class="example-paths">
-        <a href="/hello-resteasy" class="path-link" target="_blank">GET /hello-resteasy</a>
+        <a href="/states" class="path-link" target="_blank">GET /states</a>
     </div>
 </div>
 
