Created new queries using spring data jpa

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -207,6 +207,9 @@
     </div>
     <div class="example-paths">
         <a href="/states" class="path-link" target="_blank">GET /states</a>
+        <a href="/states/search/code/ES" class="path-link" target="_blank">GET /states/search/code/ES</a>
+        <a href="/states/search/name/minas" class="path-link" target="_blank">GET /states/search/name/minas</a>
+        <a href="/states/search/?name=rio&code=j" class="path-link" target="_blank">GET /states/search/?name=rio&code=j</a>
     </div>
 </div>
 
