Created logic and relationship for the city

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -210,6 +210,9 @@
         <a href="/states/search/code/ES" class="path-link" target="_blank">GET /states/search/code/ES</a>
         <a href="/states/search/name/minas" class="path-link" target="_blank">GET /states/search/name/minas</a>
         <a href="/states/search/?name=rio&code=j" class="path-link" target="_blank">GET /states/search/?name=rio&code=j</a>
+        
+        <a href="/cities" class="path-link" target="_blank">GET /cities</a>
+        <a href="/cities/search/statecode/MG" class="path-link" target="_blank">GET /search/statecode/{statecode}</a>
     </div>
 </div>
 
