Logic created for the User

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -213,6 +213,10 @@
         
         <a href="/cities" class="path-link" target="_blank">GET /cities</a>
         <a href="/cities/search/statecode/MG" class="path-link" target="_blank">GET /search/statecode/{statecode}</a>
+        
+        <a href="/users" class="path-link" target="_blank">GET /users</a>
+        <a href="#" class="path-link" target="_blank">POST /users *</a>        
+        <a href="#" class="path-link" target="_blank">DELETE /users/{username} *</a>
     </div>
 </div>
 
