--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -215,8 +215,9 @@
         <a href="/cities/search/statecode/MG" class="path-link" target="_blank">GET /search/statecode/{statecode}</a>
         
         <a href="/users" class="path-link" target="_blank">GET /users</a>
-        <a href="#" class="path-link" target="_blank">POST /users *</a>        
-        <a href="#" class="path-link" target="_blank">DELETE /users/{username} *</a>
+        <a href="#" class="path-link" >POST /users *</a>        
+        <a href="#" class="path-link">DELETE /users/{username} *</a>
+        <a href="/users/whoami" class="path-link" target="_blank">GET /users/whoami</a>
     </div>
 </div>
 
